fix(pop-up): adding fixes for font-size on parent causing layout shift on icons.

--- a/packages/web-components/src/components/rux-pop-up/rux-pop-up.scss
+++ b/packages/web-components/src/components/rux-pop-up/rux-pop-up.scss
@@ -1,6 +1,7 @@
 :host {
     display: block;
     width: min-content;
+    font-size: var(--font-size-base); //prevents icon shift from font-size declaration on parent.
 }
 
 .hidden,
